# qt-video-info

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: clang_format.cmake  clean_all.cmake
include/: ArgParser.h  IMediaMetadataProvider.h  Video.h  VideoInfoExtractor.h
src/: ArgParser.cpp  Video.cpp  VideoInfoExtractor.cpp  main.cpp
